--- a/UserApp/UserApp.csproj
+++ b/UserApp/UserApp.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Book\book10.png" />
+    <None Remove="Resources\Book\book6.png" />
+    <None Remove="Resources\Book\book7.png" />
+    <None Remove="Resources\Book\book8.png" />
+    <None Remove="Resources\Book\book9.png" />
+    <None Remove="Resources\Book\booktest.jpg" />
+    <None Remove="Resources\Book\booktest.png" />
     <None Remove="Resources\Book\icon.png" />
+    <None Remove="Resources\Book\search.png" />
     <None Remove="Resources\Fonts\ofont.ru_Montserrat.ttf" />
   </ItemGroup>
 
@@ -23,13 +31,26 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\Infastructure\Infastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\Book\background.png" />
     <Resource Include="Resources\Book\book1.png" />
+    <Resource Include="Resources\Book\book10.png" />
     <Resource Include="Resources\Book\book2.png" />
     <Resource Include="Resources\Book\book3.png" />
     <Resource Include="Resources\Book\book4.png" />
     <Resource Include="Resources\Book\book5.png" />
+    <Resource Include="Resources\Book\book6.png" />
+    <Resource Include="Resources\Book\book7.png" />
+    <Resource Include="Resources\Book\book8.png" />
+    <Resource Include="Resources\Book\book9.png" />
+    <Resource Include="Resources\Book\booktest.jpg" />
+    <Resource Include="Resources\Book\booktest.png" />
     <Resource Include="Resources\Book\icon.png" />
+    <Resource Include="Resources\Book\search.png" />
     <Resource Include="Resources\Fonts\ofont.ru_Montserrat.ttf" />
   </ItemGroup>
 
