--- a/UserApp/UserApp.csproj
+++ b/UserApp/UserApp.csproj
@@ -30,10 +30,14 @@
     <None Remove="Resources\Book\registrB2.png" />
     <None Remove="Resources\Book\search.png" />
     <None Remove="Resources\Fonts\ofont.ru_Montserrat.ttf" />
+    <None Remove="Resources\Music\about.png" />
+    <None Remove="Resources\Music\AddCover.png" />
     <None Remove="Resources\Music\backAuth.png" />
+    <None Remove="Resources\Music\backPlayList.png" />
     <None Remove="Resources\Music\backReg.png" />
     <None Remove="Resources\Music\backStart.png" />
     <None Remove="Resources\Music\Classic.png" />
+    <None Remove="Resources\Music\help.png" />
     <None Remove="Resources\Music\iconimage.png" />
     <None Remove="Resources\Music\narod.png" />
     <None Remove="Resources\Music\pop.png" />
@@ -91,10 +95,14 @@
     <Resource Include="Resources\Book\registrB2.png" />
     <Resource Include="Resources\Book\search.png" />
     <Resource Include="Resources\Fonts\ofont.ru_Montserrat.ttf" />
+    <Resource Include="Resources\Music\about.png" />
+    <Resource Include="Resources\Music\AddCover.png" />
     <Resource Include="Resources\Music\backAuth.png" />
+    <Resource Include="Resources\Music\backPlayList.png" />
     <Resource Include="Resources\Music\backReg.png" />
     <Resource Include="Resources\Music\backStart.png" />
     <Resource Include="Resources\Music\Classic.png" />
+    <Resource Include="Resources\Music\help.png" />
     <Resource Include="Resources\Music\iconimage.png" />
     <Resource Include="Resources\Music\narod.png" />
     <Resource Include="Resources\Music\pop.png" />
